--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container my-5">
-        <h1>Conversor de Moeda</h1>
+        <h1>Conversor de Moedas</h1>
         <form>
             <div class="form-group">
                 <label for="real">Real (BRL):</label>
